--- a/ios/Podfile
+++ b/ios/Podfile
@@ -26,7 +26,11 @@ if linkage != nil
 end
 
 target 'HungryScholars' do
+
   config = use_native_modules!
+  use_frameworks! :linkage => :static
+  $RNFirebaseAsStaticFramework = true
+
 
   # Flags change depending on the env values.
   flags = get_default_flags()
@@ -40,7 +44,7 @@ target 'HungryScholars' do
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    :flipper_configuration => flipper_config,
+    # :flipper_configuration => flipper_config,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
