--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,7 +14,8 @@ buildscript {
         google()
         mavenCentral()
     }
-    dependencies {
+    dependencies {    
+        classpath ('com.google.gms:google-services:4.4.0')
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
     }
